Upgrade to Azure SDK 1.0 (big change)